--- a/css/yeapcp.css
+++ b/css/yeapcp.css
@@ -1,11 +1,5 @@
 /*
-To change this license header, choose License Headers in Project Properties.
-To change this template file, choose Tools | Templates
-and open the template in the editor.
-*/
-/* 
-    Created on : Jul 19, 2017, 1:22:49 PM
-    Author     : as
+Custom CSS for PCP pages.
 */
 
 
